# skills-eval

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING_ZH.md  LICENSE  PLAN-ai-friendly-cli.md  README.md  README_ZH.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: BLOG_POST.md  BLOG_POST_ZH.md  INSTALL_GUIDE.md  INSTALL_GUIDE_ZH.md  LAUNCH_CHECKLIST.md  LAUNCH_DAY.md  SKILL_EVAL_REPORT_compare-quotation.md  SOCIAL_MEDIA.md  SOCIAL_MEDIA_ZH.md  USER_MANUAL.md  USER_MANUAL_ZH.md
sample-tasks/invoice-extraction/: config.yaml  prompt.md  skill.md
sample-tasks/invoice-extraction/expected/: result.json
sample-tasks/invoice-extraction/input/: invoice.txt
src/skilleval/: __init__.py  __main__.py  analyze.py  cli.py  client.py  compare.py  config.py  default_models.yaml  display.py  documents.py  engine.py  html_report.py  linter.py  models.py  rate_limiter.py  results.py  runner.py  settings.py  skill_parser.py  tui.py
src/skilleval/comparators/: __init__.py  base.py  csv_ordered.py  csv_unordered.py  custom.py  field_subset.py  file_hash.py  json_exact.py  text_contains.py  text_exact.py
src/skilleval/i18n/: __init__.py
src/skilleval/i18n/locales/: en.yaml  zh.yaml
tests/: conftest.py  test_adhoc_model.py  test_cli.py  test_client.py  test_client_async.py  test_compare.py  test_config.py  test_documents.py  test_engine_async.py  test_engine_integration.py  test_html_report.py  test_i18n.py  test_linter.py  test_models.py  test_rate_limiter.py  test_runner.py  test_runner_async.py  test_skill_test.py  test_tui.py
tests/test_comparators/: test_base.py  test_csv_ordered.py  test_csv_unordered.py  test_factory.py  test_field_subset.py  test_file_hash.py  test_json_exact.py
