[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skilleval"
version = "0.1.0"
description = "Find the cheapest model that gets your task 100% right"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "aiohttp>=3.9",
    "rich>=13.0",
]

[project.optional-dependencies]
docs = [
    "pdfplumber>=0.10",
    "python-docx>=1.0",
    "openpyxl>=3.1",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "aioresponses>=0.7",
    "ruff>=0.3",
]

[project.scripts]
skilleval = "skilleval.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/skilleval"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
